--- a/app/css/card.scss
+++ b/app/css/card.scss
@@ -23,12 +23,12 @@
   --alpha: 0;
   content: "";
   background: conic-gradient(from 180deg at 50% 70%,
-      #f626af 0deg,
-      #8228ec 72.0000010728836deg,
-      #f626af 144.0000021457672deg,
-      #0025ba 216.00000858306885deg,
-      #f626af 288.0000042915344deg,
-      #fafafa 1turn);
+      #B59E7D 0deg,
+      #58473B 72.0000010728836deg,
+      #B59E7D 144.0000021457672deg,
+      #AAA396 216.00000858306885deg,
+      #B59E7D 288.0000042915344deg,
+      #F1EADA 1turn);
   background-attachment: fixed;
   position: absolute;
   inset: -5px;
@@ -52,7 +52,7 @@
   content: "";
   border-radius: 12px;
   pointer-events: none;
-  background: #84738c;
+  background: #CEC1A8;
   background-attachment: fixed;
   border-radius: 12px;
   mask: linear-gradient(#0000, #0000),
@@ -72,12 +72,12 @@
   pointer-events: none;
   position: absolute;
   background: conic-gradient(from 180deg at 50% 70%,
-      #f626af 0deg,
-      #8228ec 72.0000010728836deg,
-      #f626af 144.0000021457672deg,
-      #0025ba 216.00000858306885deg,
-      #f626af 288.0000042915344deg,
-      #fafafa 1turn);
+      #B59E7D 0deg,
+      #58473B 72.0000010728836deg,
+      #B59E7D 144.0000021457672deg,
+      #AAA396 216.00000858306885deg,
+      #B59E7D 288.0000042915344deg,
+      #F1EADA 1turn);
   background-attachment: fixed;
   border-radius: 12px;
   opacity: var(--active, 0);
